--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.31.0",
     "@types/node": "^24.0.15",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "electron": "^37.2.3",
     "electron-vite": "^4.0.0",
     "eslint": "^9.31.0",
     "jiti": "^2.4.2",
-    "typescript-eslint": "^8.37.0",
+    "typescript-eslint": "^8.38.0",
     "unplugin-zip-pack": "^1.0.3",
     "vite": "^7.0.5",
-    "vite-plugin-checker": "^0.10.0",
+    "vite-plugin-checker": "^0.10.1",
     "vite-plugin-cp": "^6.0.3"
   },
   "packageManager": "pnpm@10.13.1",
   "qwqnt": {
     "name": "QwQNT 插件模板",
-    "entry": {
+    "inject": {
       "preload": "./preload/index.mjs",
       "renderer": "./renderer/index.js"
     }
