feat: adapt new build

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,6 +1,10 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
-  "include": ["src/renderer/**/*.ts", "src/preload/**/*", "src/preload/*.d.ts", "src/global.d.ts"],
+  "include": [
+    "src/renderer/**/*.ts",
+    "src/preload/**/*",
+    "src/global.d.ts"
+  ],
   "compilerOptions": {
     "composite": true
   }
