--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,7 +1,7 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
   "include": [
-    "src/renderer/**/*.ts",
+    "src/renderer/**/*",
     "src/preload/**/*",
     "src/global.d.ts"
   ],
