feat: use oxlint
I want to use oxlint, so I migrate to it. If you want to use eslint, please use previous commit or clone this repository and do it yourself.

--- a/package.json
+++ b/package.json
@@ -7,26 +7,20 @@
   "main": "./main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix src/**/* --ext .js,.ts",
+    "lint": "oxlint --fix --tsconfig ./tsconfig.json --type-aware src/**/*.js,src/**/*.ts",
     "build": "electron-vite build"
   },
   "author": "Adpro",
   "license": "MIT",
   "devDependencies": {
-    "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@eslint/js": "^9.33.0",
     "@types/node": "^24.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
     "electron": "^37.2.6",
     "electron-vite": "^4.0.0",
-    "eslint": "^9.33.0",
-    "jiti": "^2.5.1",
-    "typescript-eslint": "^8.39.1",
+    "oxlint": "^1.12.0",
+    "unplugin-oxlint": "^0.7.5",
     "unplugin-zip-pack": "^1.0.3",
     "vite": "^7.1.2",
-    "vite-plugin-checker": "^0.10.2",
     "vite-plugin-cp": "^6.0.3"
   },
   "packageManager": "pnpm@10.14.0",
