feat: 使用远程包

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./plugin.schema.json",
+  "$schema": "https://raw.githubusercontent.com/QwQ-002/types/main/plugin.schema.json",
   "name": "qwqnttemplate-vite-pnpm",
   "version": "1.0.0",
   "description": "A plugin template for QwQNT, powered by Vite & Typescript",
@@ -13,10 +13,11 @@
   "license": "MIT",
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@qwqnt/types": "github:QwQ-002/types",
     "@types/node": "^24.3.0",
-    "electron": "^37.3.1",
+    "electron": "^37.4.0",
     "electron-vite": "^4.0.0",
-    "oxlint": "^1.12.0",
+    "oxlint": "^1.13.0",
     "unplugin-oxlint": "^0.7.5",
     "unplugin-zip-pack": "^1.0.3",
     "vite": "^7.1.3",
