--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
   "include": ["electron.vite.config.*", "src/main/**/*", "src/global.d.ts"],
   "compilerOptions": {
     "composite": true,
-    "types": ["electron-vite/node"],
+    "types": ["electron-vite/node", "@qwqnt/types/main"],
     "moduleResolution": "bundler"
   }
 }
