--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -6,6 +6,7 @@
     "src/global.d.ts"
   ],
   "compilerOptions": {
-    "composite": true
+    "composite": true,
+    "types": ["@qwqnt/types/preload", "@qwqnt/types/renderer"]
   }
 }
