--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -31,5 +31,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: qwqnttemplate-vite-pnpm.zip
+          files: qwqnt-template-vite-pnpm.zip
           body_path: ./changeLog.md
